Align drop down menu item
*Align Palettes drop down menu with other menu items

*Create additional pages to link to drop down menu

--- a/.devcontainer/CODE/index.css
+++ b/.devcontainer/CODE/index.css
@@ -12,6 +12,16 @@ p {
     background-color: #000;
 }
 
+/* Social Icons */
+
+.social-icons {
+size-adjust: 10em;
+}
+
+.fa-twitter {
+    color: pink;
+}
+
 .nav-item {font-family: 'Grandiflora One', cursive;
     font-weight: 1000;
 }
