--- a/.devcontainer/CODE/index.css
+++ b/.devcontainer/CODE/index.css
@@ -41,6 +41,13 @@ color: black;
     font-size: large;
 }
 
+.colour-wheel {
+    .center {
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+      }
+}
 
 /* Palette Section */
 
