--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -13,7 +13,7 @@ h3 {
 
 p {
     font-family: 'Grandiflora One', cursive;
-    font-size: 1.5em;
+    /* font-size: 1.5em; */
 }
 
 a:hover {
@@ -29,16 +29,22 @@ a:hover {
     background-color: #000;
 }
 
+
+.main-title {
+    padding-bottom: 1em;
+}
+
+/* Coming Soon Section */
+
 .coming-soon {
     background-color: #370b1f;
     color: white;
     padding-top: 5em;
 }
 
-.main-title {
-    padding-bottom: 1em;
+.coming-soon-text {
+    size: 1.5em;
 }
-
 
 /* Social Icons */
 
