--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -16,10 +16,6 @@ p {
     /* font-size: 1.5em; */
 }
 
-a:hover {
-    color: aquamarine;
-    }
-
 .container-fluid {
     padding-top: 3em;
     padding-bottom: 3em;
@@ -37,7 +33,7 @@ a:hover {
 /* Coming Soon Section */
 
 .coming-soon {
-    background-color: #370b1f;
+    background-color: #580b20;
     color: white;
     padding-top: 5em;
 }
@@ -64,6 +60,26 @@ color: black;
     background-color: white;
     padding-bottom: 0;
 }
+
+.nav-link {
+    color: #000 !important;
+    /* Set the default color */
+    transition: color 0.3s;
+    /* Add a smooth transition effect */
+}
+
+/* Hover state styling */
+.nav-link:hover {
+    color: #dc9806 !important;
+    /* Set the color you want on hover */
+}
+
+.nav-link:active {
+    color: #580b20 !important;
+    /* Set the color you want on active */
+}
+
+
 
 /* Colour Theory Page */
 
@@ -100,6 +116,12 @@ color: black;
 
 .hero-images {
     padding-left: 1em;
+}
+
+.how-to {
+    background-color: #580b20;
+    padding-top: 1em;
+    border-top: 0;
 }
 
 
