--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -72,7 +72,6 @@ color: black;
     /* Add a smooth transition effect */
 }
 
-
 /* Hover state styling */
 .nav-link:hover {
     color: #dc9806 !important;
@@ -135,3 +134,6 @@ padding-top: 0!important;
     margin-top: 1em;
 }
 
+.thank-you {
+    text-align: center;
+}
