Add bootstrap credit notes in code on all pages

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -139,3 +139,9 @@ padding-top: 0!important;
 .thank-you {
     text-align: center!important;
 }
+
+/* 404 page */
+
+.fourzerofour {
+    color: #dc9806;
+}
