Update footer to include DesignLed website link on copyright line *Update formatting so that hover has hover colour but no underline *Implement on every page

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -44,7 +44,7 @@ p {
   text-align: center;
 }
 
-/* Social Icons */
+/* Footer */
 
 .social-icons {
   color: black;
@@ -52,6 +52,15 @@ p {
 
 .social-icons:hover {
   color: #dc9806 !important;
+}
+
+.copyright {
+  color: #000 !important;
+}
+
+.copyright:hover {
+  color: #dc9806 !important;
+  text-decoration: none;
 }
 
 /* Nav Bar  */
@@ -71,7 +80,6 @@ p {
   transition: color 0.3s;
 }
 
-/* Hover state styling */
 .nav-link:hover {
   color: #dc9806 !important;
 }
