--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -154,3 +154,20 @@ text-align: center!important;
 .fourzerofour {
   color: #dc9806;
 }
+
+
+/* Media Queries */
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .description {
+    margin-top: 1em;
+  } 
+}
+
+@media (max-width: 1300px) {
+  .colours-section {
+    max-width: 50%;
+ 
+  }
+} 
+  
