Update text label to increase accessibility on copyright line in footer after Lighthouse test

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -54,11 +54,11 @@ p {
   color: #dc9806 !important;
 }
 
-.copyright {
+.DesignLed-copyright {
   color: #000 !important;
 }
 
-.copyright:hover {
+.DesignLed-copyright:hover {
   color: #dc9806 !important;
   text-decoration: none;
 }
@@ -154,7 +154,6 @@ text-align: center!important;
 .fourzerofour {
   color: #dc9806;
 }
-
 
 /* Media Queries */
 
