--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -101,6 +101,12 @@ p {
   padding-right: 1em;
 }
 
+/* .center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+} */
+
 /* Palette Section */
 
 .palette-title {
@@ -163,10 +169,10 @@ text-align: center!important;
   } 
 }
 
-@media (max-width: 1300px) {
+/* @media (max-width: 1300px) {
   .colours-section {
     max-width: 50%;
  
   }
-} 
+}  */
   
