Copy new footer code to all pages

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -167,7 +167,7 @@ text-align: center!important;
   .description {
     margin-top: 1em;
   } 
-  .bi {
+  .social-icons-row {
     width: 60px;
     height: 50px;
   }
