--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -11,7 +11,7 @@ h3 {
 p {
   font-family: "Grandiflora One", cursive;
   font-weight: 1000;
-  font-size: large;
+  font-size: 1.5em;
 }
 
 .container-fluid {
