--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -1,4 +1,3 @@
-ch1,
 h2 {
   font-family: "Arial Narrow Bold", sans-serif;
   font-weight: bold;
@@ -29,7 +28,7 @@ p {
 
 /* Nav Bar  */
 .nav-item {
-  font-family: "Poiret One", sans-serif;
+ font-family: "Poiret One", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 1.25em;
@@ -56,6 +55,13 @@ p {
 
 
 /* Footer */
+
+/* To make sticky footer */
+.wrapper {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
 
 .social-icons {
   color: black;
@@ -113,7 +119,6 @@ p {
   padding-right: 1em;
 }
 
-
 /* Palette Section */
 
 .palette-title {
@@ -129,10 +134,6 @@ p {
   max-width: 100%;
   height: auto;
 }
-
-/* .hero-images {
-text-align: center!important;
-} */
 
 .col-xl-6-left {
   margin-right: 90;
