Change button hover colour to reflect brand colours

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -25,6 +25,11 @@ p {
   font-family: "Arial Narrow Bold", sans-serif;
 }
 
+.btn:hover {
+  background-color: #dc9806;
+  border: none;
+}
+
 
 /* Nav Bar  */
 .nav-item {
