Work on navbar on mobile view *Remove spacer to make brand centralised on mobile view *Add padding on hamburger on mobile view to make it aligned with brand

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -198,6 +198,11 @@ p {
   .sub-header {
     font-size: 1em;
   }
+
+  .navbar-toggler {
+    margin-top: 2em;
+  }
+
 }
 
 @media (min-width: 2500px) {
