--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -136,8 +136,10 @@ p {
 }
 
 .palette-list {
-  font-family: "Grandiflora One", cursive;
-  font-size: large;
+  font-family: "Poiret One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.25em; 
 }
 
 .img-responsive {
